--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,11 @@
 name=ConfigPortal8266
 version=0.1.0
-author=yhur
-maintainer=yhur
+author=Yoonseok Hur <yoonseok@gmail.com>
+maintainer=Yoonseok Hur <yoonseok@gmail.com>
 sentence=Configuration Web Portal for ESP8266
 paragraph=Configuration Web Portal for ESP8266
 category=Communication
 url=https://github.com/yhur/ConfigPortal8266
 architectures=esp8266
+includes=ConfigPortal8266.h
+depends=ArduinoJson
