--- a/library.properties
+++ b/library.properties
@@ -1,7 +1,7 @@
 name=ConfigPortal8266
-version=0.1.0
-author=Yoonseok Hur <yoonseok@gmail.com>
-maintainer=Yoonseok Hur <yoonseok@gmail.com>
+version=v1.2.0
+author=yhur
+maintainer=yhur
 sentence=Configuration Web Portal for ESP8266
 paragraph=Configuration Web Portal for ESP8266
 category=Communication
