--- a/library.properties
+++ b/library.properties
@@ -8,3 +8,5 @@ category=Communication
 url=https://github.com/yhur/ConfigPortal8266
 architectures=esp8266
 depends=ArduinoJson
+license=MIT
+repository=https://github.com/yhur/ConfigPortal8266.git
