--- a/library.properties
+++ b/library.properties
@@ -1,12 +1,12 @@
 name=ConfigPortal8266
-version=2.0.1
+version=2.0.2
 author=yhur
 maintainer=yhur
 sentence=Configuration Web Portal for ESP8266
-paragraph=Configuration Web Portal for ESP8266
+paragraph=This adds a captive portal to the project and enables to enter the initial configuation information such as wifi ssid/password and so on.
 category=Communication
 url=https://github.com/yhur/ConfigPortal8266
 architectures=esp8266
-depends=ArduinoJson
+depends=ArduinoJson (>=6.18.5 && <7.0.0)
 license=MIT
 repository=https://github.com/yhur/ConfigPortal8266.git
