--- a/library.properties
+++ b/library.properties
@@ -7,6 +7,6 @@ paragraph=This adds a captive portal to the project and enables to enter the ini
 category=Communication
 url=https://github.com/yhur/ConfigPortal8266
 architectures=esp8266
-depends=ArduinoJson (>=6.18.5 && <7.0.0)
+depends=ArduinoJson (>=6.18.5 && <7.0.0), PubSubClient (>=2.8)
 repository=https://github.com/yhur/ConfigPortal8266.git
 license=MIT
