--- a/library.properties
+++ b/library.properties
@@ -1,5 +1,5 @@
 name=ConfigPortal8266
-version=2.0.5
+version=2.0.6
 author=yhur
 maintainer=yhur
 sentence=Configuration Web Portal for ESP8266
@@ -7,6 +7,6 @@ paragraph=This adds a captive portal to the project and enables to enter the ini
 category=Communication
 url=https://github.com/yhur/ConfigPortal8266
 architectures=esp8266
-depends=ArduinoJson (>=6.18.5), PubSubClient (>=2.8)
+depends=ArduinoJson (6.21.5), PubSubClient (>=2.8)
 repository=https://github.com/yhur/ConfigPortal8266.git
 license=MIT
