--- a/examples/platformio.ini
+++ b/examples/platformio.ini
@@ -14,12 +14,10 @@ board = esp12e
 framework = arduino
 monitor_speed = 115200
 upload_speed = 921000
-upload_port = /dev/cu.usbserial-AC026GAO
-monitor_port = /dev/cu.usbserial-AC026GAO
+#upload_port = COM3
+#monitor_port = COM3
 board_build.filesystem=littlefs 
 build_flags = 
 	-D MQTT_MAX_PACKET_SIZE=512
 lib_deps = 
-	knolleary/PubSubClient@^2.8
-	https://github.com/iotlab101/ConfigPortal8266
-	bblanchon/ArduinoJson@^6.18.5
+	ConfigPortal8266@^2.0.6
